syntax = "proto3";
package proto;

option go_package = "proto;proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "schema.proto";

service Backend {
    // Version
    rpc Version (google.protobuf.Empty) returns (VersionResponse) {
        option (google.api.http) = {
            get: "/v1/version"
        };
    }
    //Create Schema
    rpc CreateSchema (Schema) returns (Schema) {
        option (google.api.http) = {
            post: "/v1/schema/{projectID}"
            body:"*"
        };
    }
    //Get Schema
    rpc GetSchema (RequestObjectById) returns (Schema) {
        option (google.api.http) = {
            get: "/v1/schema/{id}"
        };
    }
}